fix the bug where text not wrapping up when it comes to super long string with no spaces

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -327,6 +327,7 @@ textarea:focus {
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
+  overflow-wrap: break-word;
 }
 
 .status {
