--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -332,6 +332,7 @@ textarea:focus {
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
+  overflow-wrap: break-word;
 }
 
 .status {
