--- a/public/styles/story.css
+++ b/public/styles/story.css
@@ -176,6 +176,7 @@ nav {
   font-family: "Quicksand", cursive;
   font-size: 26px;
   margin-top: 30px;
+  overflow-wrap: break-word;
 }
 
 .toggle-contributions {
